site/docs/v0.4.1/en/components/context-selector.mdx
# Context Selector

Context Selector provides one compact contract for model, permission, and workspace choices. Native Select is preferred when options fit ordinary selection behavior.

<Preview class="w-full max-w-3xl">
  <div
    class="grid w-full gap-3 sm:grid-cols-3"
    data-context-selector-primary-demo="en"
  >
    <label class="context-selector" data-kind="model" data-context-kind="model">
      <span data-context-label>
        Model <small>Required</small>
      </span>
      <select
        aria-label="Model"
        data-context-control="model"
        data-preview-onchange="const root=this.closest('[data-context-selector-primary-demo]'); root.dataset.modelSelected=this.value;"
      >
        <option value="auto">Auto</option>
        <option value="fast">Fast</option>
        <option value="deep">Deep analysis</option>
      </select>
      <span data-context-description>Balances latency and task complexity.</span>
    </label>
    <label
      class="context-selector"
      data-kind="permission"
      data-context-kind="permission"
    >
      <span data-context-label>Access</span>
      <select aria-label="Permission profile" data-context-control="permission">
        <option value="standard">Standard access</option>
        <option value="read-only">Read only</option>
        <option value="expanded">Expanded access</option>
      </select>
      <span data-context-description>Policy remains enforced by the host.</span>
    </label>
    <label
      class="context-selector"
      data-kind="workspace"
      data-context-kind="workspace"
    >
      <span data-context-label>Workspace</span>
      <select aria-label="Workspace" data-context-control="workspace">
        <option value="a3s-ui">A3S UI</option>
        <option value="runtime-release">Runtime release</option>
      </select>
      <span data-context-description>
        Files and task history stay scoped here.
      </span>
    </label>
  </div>
</Preview>

## Usage

```html
<label class="context-selector" data-kind="workspace">
  <span data-context-label>Workspace</span>
  <select aria-label="Workspace"><option>A3S UI</option></select>
  <span data-context-description>Files and task history stay scoped here.</span>
</label>
```

### Parameters

| API | Values | Purpose |
| --- | --- | --- |
| `data-kind` | `model`, `permission`, `workspace` | Choice semantics |
| Native `<select>` | Preferred | Ordinary finite choice |
| `button[aria-haspopup]` | Optional | Rich searchable anchored menu |
| `data-context-description` | Recommended | Consequence of the choice |

## States and variants

Unavailable choices remain visible with their reason when that helps users recover. Do not imply that a visual selection grants permission.

## Accessibility

Use a native label and control name. Anchored menus restore focus to their trigger and constrain themselves to the viewport.

## React

```tsx
import { ContextSelector, useContextSelector } from "@a3s-lab/ui/react";

export function Example() {
  const control = useContextSelector();
  return (
    <ContextSelector ref={control.ref} data-kind="workspace">
      <span data-context-label="">Workspace</span>
      <select aria-label="Workspace">
        <option>A3S UI</option>
      </select>
      <span data-context-description="">
        Files and task history stay scoped here.
      </span>
    </ContextSelector>
  );
}
```

`useContextSelector` subscribes to manifest-declared DOM events and calls only public manifest methods. The adapter creates no second, framework-only state model.

## Vue

```vue
<script setup lang="ts">
import { ContextSelector, useContextSelector } from "@a3s-lab/ui/vue";

const control = useContextSelector();
const componentRef = control.componentRef;
</script>

<template>
  <ContextSelector ref="componentRef" data-kind="workspace">
    <span data-context-label="">Workspace</span>
    <select aria-label="Workspace">
      <option>A3S UI</option>
    </select>
    <span data-context-description=""
      >Files and task history stay scoped here.</span
    >
  </ContextSelector>
</template>
```

`useContextSelector` subscribes to manifest-declared DOM events and calls only public manifest methods. The adapter creates no second, framework-only state model.
